piece jointe and mailing

--- a/src/app/BackOffice/admin-reclamations/admin-reclamations.component.html
+++ b/src/app/BackOffice/admin-reclamations/admin-reclamations.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="actions">
       <button (click)="selectReclamation(reclamation)" class="btn edit">Edit</button>
-      <button (click)="deleteReclamation(reclamation.id)" class="btn delete">Delete</button>
+      <button (click)="deleteReclamation(reclamation.id!)" class="btn delete">Delete</button>
     </div>
   </div>
 
